--- a/jupyter/Tutorial1.ipynb
+++ b/jupyter/Tutorial1.ipynb
@@ -157,10 +157,9 @@
     "We will now use Gurobi Python API to solve the following simple integer linear program.\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\text{max} &~~2 x_1 + 4 x_2 \\\\\n",
+    "\\text{max} &~~10 x_1 + 4 x_2 \\\\\n",
     "\\text{s.t.} &~~3 x_1 + 2 x_2 \\leq 6, \\\\\n",
     "&~~x_1 + 5 x_2 \\leq 5, \\\\\n",
-    "&~~x_1 \\in \\mathbb{Z}, \\\\\n",
     "&~~x_1 \\geq 0, \\\\\n",
     "&~~x_2 \\geq 0.\n",
     "\\end{align}\n",
@@ -212,7 +211,7 @@
     "# Next, we create the variables.\n",
     "# NOTE: By default all variables have LB = 0, UB = infty (float('inf'))\n",
     "# and are of type GRB.CONTINUOUS. You may change these parameters (they are optional)\n",
-    "x1 = m.addVar( lb = 0.0, ub = float('inf') , vtype = GRB.INTEGER, name = \"x1\" )\n",
+    "x1 = m.addVar( lb = 0.0, ub = float('inf') , vtype = GRB.CONTINUOUS, name = \"x1\" )\n",
     "x2 = m.addVar( vtype = GRB.CONTINUOUS, name = \"x2\"  )\n",
     "\n",
     "# x1 and x2 are objects of the type Gurobi variable.\n",
@@ -228,7 +227,7 @@
    "outputs": [],
    "source": [
     "# Set the objective function to maximize 2 * x1 + 4 * x2.\n",
-    "m.setObjective( 2 * x1 + 4 * x2, GRB.MAXIMIZE )"
+    "m.setObjective( 10 * x1 + 4 * x2, GRB.MAXIMIZE )"
    ]
   },
   {
@@ -238,20 +237,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<gurobi.Constr *Awaiting Model Update*>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'gurobipy.Constr'>\n",
+      "<class 'gurobipy.Constr'>\n"
+     ]
     }
    ],
    "source": [
-    "# Add the two constraints in the model.\n",
-    "m.addConstr( 3 * x1 + 2 * x2 <= 6, \"c1\")\n",
-    "m.addConstr( x1 + 5 * x2 <= 5, \"c2\" )"
+    "# Add the two constraints in the model. These functions return objects of the type Gurobi constraint.\n",
+    "c1 = m.addConstr( 3 * x1 + 2 * x2 <= 6, \"c1\")\n",
+    "c2 = m.addConstr( x1 + 5 * x2 <= 5, \"c2\" )\n",
+    "print(type(c1))\n",
+    "print(type(c2))"
    ]
   },
   {
@@ -270,32 +269,21 @@
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 2 rows, 2 columns and 4 nonzeros\n",
-      "Model fingerprint: 0x167672fe\n",
-      "Variable types: 1 continuous, 1 integer (0 binary)\n",
+      "Model fingerprint: 0x03cda5ee\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 5e+00]\n",
-      "  Objective range  [2e+00, 4e+00]\n",
+      "  Objective range  [4e+00, 1e+01]\n",
       "  Bounds range     [0e+00, 0e+00]\n",
       "  RHS range        [5e+00, 6e+00]\n",
-      "Found heuristic solution: objective 4.0000000\n",
-      "Presolve time: 0.00s\n",
+      "Presolve time: 0.01s\n",
       "Presolved: 2 rows, 2 columns, 4 nonzeros\n",
-      "Variable types: 0 continuous, 2 integer (0 binary)\n",
       "\n",
-      "Root relaxation: objective 5.200000e+00, 0 iterations, 0.00 seconds (0.00 work units)\n",
+      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
+      "       0    1.4000000e+31   2.000000e+30   1.400000e+01      0s\n",
+      "       1    2.0000000e+01   0.000000e+00   0.000000e+00      0s\n",
       "\n",
-      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
-      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
-      "\n",
-      "*    0     0               0       5.2000000    5.20000  0.00%     -    0s\n",
-      "\n",
-      "Explored 1 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
-      "Thread count was 8 (of 8 available processors)\n",
-      "\n",
-      "Solution count 2: 5.2 4 \n",
-      "\n",
-      "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 5.200000000000e+00, best bound 5.200000000000e+00, gap 0.0000%\n"
+      "Solved in 1 iterations and 0.01 seconds (0.00 work units)\n",
+      "Optimal objective  2.000000000e+01\n"
      ]
     }
    ],
@@ -333,7 +321,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal cost: 5.2\n"
+      "Optimal cost: 20.0\n"
      ]
     }
    ],
@@ -353,8 +341,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x1: 1.0\n",
-      "x2: 0.8\n"
+      "x1: 2.0\n",
+      "x2: 0.0\n"
      ]
     }
    ],
@@ -374,13 +362,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.2\n"
+      "20.0\n"
      ]
     }
    ],
    "source": [
     "# And we can check that indeed, this solution matches the objective value we found with `m.objVal`.\n",
-    "print(2.0 * x1.X + 4.0 * x2.X)"
+    "print(10.0 * x1.X + 4.0 * x2.X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c3132cd9-8bb1-4d73-80d2-7321bf10e571",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dual of c1: 3.3333333333333335\n",
+      "Dual of c2: 0.0\n",
+      "Slack of c1: 0.0\n",
+      "Slack of c2: 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can also query the dual variables and slacks associated with the constraints.\n",
+    "print(\"Dual of c1: \" + str(c1.Pi))\n",
+    "print(\"Dual of c2: \" + str(c2.Pi))\n",
+    "print(\"Slack of c1: \" + str(c1.Slack))\n",
+    "print(\"Slack of c2: \" + str(c2.Slack))"
    ]
   },
   {
@@ -398,7 +411,9 @@
     "&~~x_1, x_2, x_3 \\geq 0.\n",
     "\\end{align}\n",
     "$$\n",
-    "Note that the optimal solution to this problem is $x_1 = 1, x_2 = 0, x_3 = 0$ with objective value 10. You should check that your script returns this solution."
+    "Note that the optimal solution to this problem is $x_1 = 1, x_2 = 0, x_3 = 0$ with objective value 10. You should check that your script returns this solution.\n",
+    "\n",
+    "Hint: Look at this page of the documentation: https://www.gurobi.com/documentation/current/refman/py_model_addvar.html"
    ]
   },
   {
