--- a/jupyter/Tutorial1.ipynb
+++ b/jupyter/Tutorial1.ipynb
@@ -19,9 +19,34 @@
     "    * Linux: https://www.youtube.com/watch?v=OYuOKXPJ5PI\n",
     "    * MacOS: https://www.youtube.com/watch?v=dcFstZl5Va4\n",
     "* Install Gurobi Python API: https://support.gurobi.com/hc/en-us/articles/360044290292-How-do-I-install-Gurobi-for-Python\n",
-    "    * ```\n",
+    "    * To do this, either run\n",
+    "      ```\n",
     "      python -m pip install gurobipy\n",
-    "      ```"
+    "      ```\n",
+    "      or\n",
+    "      ```\n",
+    "      python3 -m pip install gurobipy\n",
+    "      ```\n",
+    "* To check that Gurobi was installed correctly, run ```gurobi_cl``` in the terminal. If everything is working fine the output should be something like\n",
+    "    ```\n",
+    "    Set parameter Username\n",
+    "    Set parameter LogFile to value \"gurobi.log\"\n",
+    "    Using license file /home/matheus/Programs/gurobi1102/linux64/gurobi.lic\n",
+    "    Academic license - for non-commercial use only - expires 2025-05-16\n",
+    "    Usage: gurobi_cl [--command]* [param=value]* filename\n",
+    "    Type 'gurobi_cl --help' for more information.\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9528eeb1-b58b-4ee2-bbb6-a5ff92d3c632",
+   "metadata": {},
+   "source": [
+    "# Running Python and Jupyter Notebook\n",
+    "To run a Python script (a file with extension ```.py```), just type in the terminal ```python script.py``` or ```python3 script.py```. To test this, you can download the file ```basic.py``` from here (https://github.com/matheusota/CO370-2024/tree/main/code) and try running it. This is how you are expected to solve the exercises in this Tutorial.\n",
+    "\n",
+    "However, to make the presentation easier, this Tutorial itself was written with Jupyter notebook (https://jupyter.org). You are *not* required to know Jupyter notebook for this course, I'm just using it so that you can see the code and its outputs in a way that is easy to read and interpret."
    ]
   },
   {
@@ -154,7 +179,7 @@
    "id": "13501655-880e-48cd-843d-30336bcb5346",
    "metadata": {},
    "source": [
-    "We will now use Gurobi Python API to solve the following simple integer linear program.\n",
+    "We will now use Gurobi Python API to solve the following simple linear program.\n",
     "$$\n",
     "\\begin{align}\n",
     "\\text{max} &~~10 x_1 + 4 x_2 \\\\\n",
@@ -275,14 +300,14 @@
       "  Objective range  [4e+00, 1e+01]\n",
       "  Bounds range     [0e+00, 0e+00]\n",
       "  RHS range        [5e+00, 6e+00]\n",
-      "Presolve time: 0.01s\n",
+      "Presolve time: 0.08s\n",
       "Presolved: 2 rows, 2 columns, 4 nonzeros\n",
       "\n",
       "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
       "       0    1.4000000e+31   2.000000e+30   1.400000e+01      0s\n",
       "       1    2.0000000e+01   0.000000e+00   0.000000e+00      0s\n",
       "\n",
-      "Solved in 1 iterations and 0.01 seconds (0.00 work units)\n",
+      "Solved in 1 iterations and 0.11 seconds (0.00 work units)\n",
       "Optimal objective  2.000000000e+01\n"
      ]
     }
@@ -401,27 +426,24 @@
    "id": "09ce8d04-3c06-4eba-b0ef-f4b9b8f94907",
    "metadata": {},
    "source": [
-    "# Exercise 1\n",
+    "# Exercises\n",
+    "I believe that the best way of learning how to use Gurobi's Python API is to look at the examples in the website (https://www.gurobi.com/documentation/current/examples/python_examples.html) and to read Gurobi's documentation. The following exercises were made so that you can practice writing your own Gurobi models and also to somewhat force you to look at the relevant documentation.\n",
+    "\n",
+    "## Exercise 1\n",
     "Write a Gurobi Python script that solves the following integer programming model.\n",
     "$$\n",
     "\\begin{align}\n",
     "\\text{max} &~~10 x_1 + 5 x_2 + 3 x_3 \\\\\n",
-    "\\text{s.t.} &~~x_1 + x_2 + x_3 \\leq 1, \\\\\n",
+    "\\text{s.t.} &~~x_1 + x_2 + x_3 \\leq 1.5, \\\\\n",
     "&~~x_1, x_2, x_3 \\in \\mathbb{Z}, \\\\\n",
     "&~~x_1, x_2, x_3 \\geq 0.\n",
     "\\end{align}\n",
     "$$\n",
     "Note that the optimal solution to this problem is $x_1 = 1, x_2 = 0, x_3 = 0$ with objective value 10. You should check that your script returns this solution.\n",
     "\n",
-    "Hint: Look at this page of the documentation: https://www.gurobi.com/documentation/current/refman/py_model_addvar.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8eddeb80-8b4e-4e5b-9a1b-32dc149fde72",
-   "metadata": {},
-   "source": [
-    "# Exercise 2\n",
+    "Hint: Look at this page of the documentation: https://www.gurobi.com/documentation/current/refman/py_model_addvar.html\n",
+    "\n",
+    "## Exercise 2\n",
     "Write a Gurobi Python script that solves the following linear programming model.\n",
     "$$\n",
     "\\begin{align}\n",
