updated tutorial again...

--- a/jupyter/Tutorial1.ipynb
+++ b/jupyter/Tutorial1.ipynb
@@ -44,9 +44,9 @@
    "metadata": {},
    "source": [
     "# Running Python and Jupyter Notebook\n",
-    "To run a Python script (a file with extension ```.py```), just type in the terminal ```python script.py``` or ```python3 script.py```. To test this, you can download the file ```basic.py``` from here (https://github.com/matheusota/CO370-2024/tree/main/code) and try running it. This is how you are expected to solve the exercises in this Tutorial.\n",
+    "To run a Python script (a file with extension ```.py```), just type in the terminal ```python script.py``` or ```python3 script.py```. To test this, you can download the file ```basic.py``` from here (https://github.com/matheusota/CO370-2024/tree/main/code) and try running it. To solve the exercises in this Tutorial you are expected to write your own Python scripts and run them.\n",
     "\n",
-    "However, to make the presentation easier, this Tutorial itself was written with Jupyter notebook (https://jupyter.org). You are *not* required to know Jupyter notebook for this course, I'm just using it so that you can see the code and its outputs in a way that is easy to read and interpret."
+    "However, to make the presentation easier, this Tutorial itself was written with Jupyter notebook (https://jupyter.org). You are **not** required to know Jupyter notebook for this course, I'm just using it so that you can see the code and its outputs in a way that is easy to read and interpret."
    ]
   },
   {
