--- a/jupyter/Tutorial1.ipynb
+++ b/jupyter/Tutorial1.ipynb
@@ -5,6 +5,7 @@
    "id": "30729997-2735-4ec3-b017-e980413c2e79",
    "metadata": {},
    "source": [
+    "# Tutorial 1\n",
     "# Installing Python and Gurobi\n",
     "\n",
     "## Python and PIP\n",
