--- a/jupyter/Tutorial2.ipynb
+++ b/jupyter/Tutorial2.ipynb
@@ -403,8 +403,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "389324d3-aa64-4cb5-aea8-b74dad1edbfb",
+   "cell_type": "markdown",
+   "id": "f502f3fa-56a2-49ba-b355-8345fccaca0a",
    "metadata": {},
    "source": [
     "Let's import Gurobi and create the model."
@@ -470,12 +470,39 @@
    "id": "3c9ede61-f929-4fe3-8c37-6a32764eb08f",
    "metadata": {},
    "source": [
-    "So the `addVars` function gives a list of variables indexed from 0 to n - 1. Let us now build the objective function and the constraint."
+    "So the `addVars` function gives a list of variables indexed from 0 to n - 1. But we are getting some \"ugly printing\" because we did not update the model. So let's do this."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "764d97ad-4da1-4f8c-882b-6f4cc0192e3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: <gurobi.Var x[0]>, 1: <gurobi.Var x[1]>, 2: <gurobi.Var x[2]>, 3: <gurobi.Var x[3]>, 4: <gurobi.Var x[4]>}\n"
+     ]
+    }
+   ],
+   "source": [
+    "m.update()\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8bf05f5-5dd5-4ffa-8eff-dc4d7b61be5c",
+   "metadata": {},
+   "source": [
+    "This is much better! Now let's add the objective function and the constraint."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "6da98d97-1abc-4c36-8e8d-ad1fb36f4eb6",
    "metadata": {},
    "outputs": [
@@ -483,8 +510,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.0 <gurobi.Var *Awaiting Model Update*> + 5.0 <gurobi.Var *Awaiting Model Update*> + 6.0 <gurobi.Var *Awaiting Model Update*> + 7.0 <gurobi.Var *Awaiting Model Update*> + 5.0 <gurobi.Var *Awaiting Model Update*>\n",
-      "4.0 <gurobi.Var *Awaiting Model Update*> + <gurobi.Var *Awaiting Model Update*> + 2.0 <gurobi.Var *Awaiting Model Update*> + 4.0 <gurobi.Var *Awaiting Model Update*> + 2.0 <gurobi.Var *Awaiting Model Update*>\n"
+      "3.0 x[0] + 5.0 x[1] + 6.0 x[2] + 7.0 x[3] + 5.0 x[4]\n",
+      "4.0 x[0] + x[1] + 2.0 x[2] + 4.0 x[3] + 2.0 x[4]\n"
      ]
     },
     {
@@ -493,7 +520,7 @@
        "<gurobi.Constr *Awaiting Model Update*>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "f78beb18-f24c-4dc5-9b2f-58f75a464b15",
    "metadata": {},
    "outputs": [
@@ -533,14 +560,20 @@
       "CPU model: Intel(R) Core(TM) i7-4720HQ CPU @ 2.60GHz, instruction set [SSE2|AVX|AVX2]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 2 rows, 5 columns and 10 nonzeros\n",
+      "Optimize a model with 1 rows, 5 columns and 5 nonzeros\n",
+      "Model fingerprint: 0xafca99d6\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 4e+00]\n",
       "  Objective range  [3e+00, 7e+00]\n",
       "  Bounds range     [0e+00, 0e+00]\n",
       "  RHS range        [1e+01, 1e+01]\n",
+      "Presolve removed 1 rows and 5 columns\n",
+      "Presolve time: 0.01s\n",
+      "Presolve: All rows and columns removed\n",
+      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
+      "       0    5.0000000e+01   0.000000e+00   0.000000e+00      0s\n",
       "\n",
-      "Solved in 0 iterations and 0.00 seconds (0.00 work units)\n",
+      "Solved in 0 iterations and 0.01 seconds (0.00 work units)\n",
       "Optimal objective  5.000000000e+01\n",
       "Gurobi status: 2\n",
       "\n",
@@ -576,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "123d622c-d3be-4543-8b82-047551ed1c09",
    "metadata": {},
    "outputs": [
