--- a/jupyter/Tutorial3.ipynb
+++ b/jupyter/Tutorial3.ipynb
@@ -289,12 +289,7 @@
     "For each $i = 1, \\ldots, \\ell$ and arc $uv \\in A$, we have a **flow variable** $f^i_{uv}$, which is an integer variable and indicates the amount of passengers of flight $c_i$ that should travel through arc $uv$ (either making a connection between flights $u$ and $v$, or departuring/arriving in the origin/destination of flight $c_i$). We formulate this problem as follows.\n",
     "\\begin{align} \n",
     "\\min &~~\\sum_{i = 1}^\\ell \\sum_{a \\in \\delta^+(s_i)} f^i_a & \\nonumber \\\\\n",
-    "\\text{s.t.} &~~ \\sum_{a \\in \\delta^-(v)} f^i_a - \\sum_{a \\in \\delta^+(v)} f^i_a =\n",
-    "\\begin{cases}\n",
-    "-p_i & \\text{if } v = s_i, \\\\\n",
-    "p_i & \\text{if } v = t_i, \\\\\n",
-    "0 & \\text{otherwise,}\n",
-    "\\end{cases} & \\forall v \\in V,~i = 1, \\ldots, \\ell, \n",
+    "\\text{s.t.} &~~ \\sum_{a \\in \\delta^-(v)} f^i_a - \\sum_{a \\in \\delta^+(v)} f^i_a = 0, & \\forall v \\in V \\setminus \\{s_i, t_i\\},~i = 1, \\ldots, \\ell, \n",
     " \\nonumber \\\\\n",
     "&~~ \\sum_{i = 1}^\\ell \\sum_{a \\in \\delta^-(f_j)} f^i_a \\leq u_i, & \\forall j = 1, \\ldots, k, \\nonumber \\\\ \n",
     "&~~ f^i_a \\in \\{0, \\ldots, p_i\\}, & \\forall a \\in A,~i = 1, \\ldots, \\ell. \n",
