--- a/jupyter/Tutorial3.ipynb
+++ b/jupyter/Tutorial3.ipynb
@@ -291,7 +291,7 @@
     "\\min &~~\\sum_{i = 1}^\\ell \\sum_{a \\in \\delta^+(s_i)} f^i_a & \\nonumber \\\\\n",
     "\\text{s.t.} &~~ \\sum_{a \\in \\delta^-(v)} f^i_a - \\sum_{a \\in \\delta^+(v)} f^i_a = 0, & \\forall v \\in V \\setminus \\{s_i, t_i\\},~i = 1, \\ldots, \\ell, \n",
     " \\nonumber \\\\\n",
-    "&~~ \\sum_{i = 1}^\\ell \\sum_{a \\in \\delta^-(f_j)} f^i_a \\leq u_i, & \\forall j = 1, \\ldots, k, \\nonumber \\\\ \n",
+    "&~~ \\sum_{i = 1}^\\ell \\sum_{a \\in \\delta^-(f_j)} f^i_a \\leq u_j, & \\forall j = 1, \\ldots, k, \\nonumber \\\\ \n",
     "&~~ f^i_a \\in \\{0, \\ldots, p_i\\}, & \\forall a \\in A,~i = 1, \\ldots, \\ell. \n",
     "\\end{align}"
    ]
